--- a/contact-us.html
+++ b/contact-us.html
@@ -21,25 +21,30 @@
   </head>
   <body class="homepage">   
     <header id="header">
-           <div class="banner">
+        <div class="banner">
       <div class="conference-name">
-                <h1>ICITDA 2K17</h1>       
-                <h3>JECRC Foundation</h3>
+                    <h1>International Conference
+                    On Information Technology 
+                    &amp; Digital Applications</h1>     
+                    <h3>JECRC Foundation</h3>
       </div>
       <div class="conference-img"> 
         <div>
             <p style="color: red">Organised By :</p>
         </div>
-      <div>
+    <div class="organised">
         <img class="imgb" align="center" src="images/jc.png">
         <img class="JECRC"  src="http://www.jecrcfoundation.com/images/logo.jpg">
-        <img class="IEEE" src="images/IEEE.jpg"> 
-      </div>
+        <img class="ICITDA" src="images/ICITDA.png"> 
+        <img class="CSI" src="images/CSI.png"> 
+        <img class="ACM" src="images/ACM.png"> 
+        </div>
+    </div>
     </div>
   </div>
 
         <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="150" role="banner">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
