--- a/contact-us.html
+++ b/contact-us.html
@@ -65,6 +65,7 @@
                                 <a href="registration.html">Registration</a>
                                 <a href="submission.html">Submission</a>
                                 <a href="guidelines.html">Author Guidelines</a>
+                                <a href="#">Tentative Schedule</a>
                                 </div>
                                     </li> 
                          <li><a href="callforpapers.html">Call for papers</a></li>
@@ -92,50 +93,55 @@
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-1" style="text-align: center">
+                    <div class="widget">
+                        <img src="images/loca.png" style="max-width: 70px;max-height: 70px;">
+                    </div>    
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3">
                     <div class="widget">
                         <h3>Address</h3>
                         <ul>
-                            <li>Jecrc found</li>
-                            <li>Address line 1</li>
-                            <li>Address line 2</li>
-                            <li>Address line 3</li>                           
+                            <li>Jecrc found</li>                         
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-1" style="text-align:center;">
                     <div class="widget">
-                        <h3>Contact numbers</h3>
-                        <ul>
-                            <li>0000</li>
-                            <li>0000</li>
-                            <li>0000</li>
-                            <li>0000</li>                          
-                        </ul>
+                        <img src="images/talk.svg" style="max-width: 70px;max-height: 70px;">
                     </div>    
                 </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-3">
+                    <div class="widget">
+                        <h3>Talk To Us</h3>
+                        <ul>
+                            <li>Name</li>                          
+                        </ul>
+                    </div>    
+                </div><!--/.col-md-3-->
+                <div class="col-xs-6 col-sm-6 col-md-1" style="text-align: center">
+                    <div class="widget">
+                        <img src="images/mail.svg" style="max-width: 70px;max-height: 70px;"> 
+                    </div>
+                </div><!--/.col-md-3-->
+                <div class="col-xs-6 col-sm-6 col-md-3">
                     <div class="widget">
                         <h3>Email</h3>
                         <ul>
                             <li>email1@xyz.com</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
             </div>
         </div>
     </section>
-
+    
 <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2018 <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">JECRC</a>. All Rights Reserved.
+                    &copy; 2018 <a target="_blank" href="http://jecrcfoundation.com/">JECRC</a>. All Rights Reserved.
                 </div>
                 
             </div>
