--- a/venue.html
+++ b/venue.html
@@ -66,6 +66,7 @@
                                 <a href="registration.html">Registration</a>
                                 <a href="submission.html">Submission</a>
                                 <a href="guidelines.html">Author Guidelines</a>
+                                <a href="#">Tentative Schedule</a>
                                 </div>
                                     </li> 
                          <li><a href="callforpapers.html">Call for papers</a></li>
