--- a/dates.html
+++ b/dates.html
@@ -99,28 +99,29 @@
     <tbody style="padding-left: 20px;">        
            
     <tr>       
-    <td style="border: none;"> Last Date to Submit the Paper: </td>        
-    <td style="border: none;">     
-    <span style="text-decoration: line-through!important;">August 31, 2017</span> &nbsp;&nbsp;&nbsp;<span style="">September 15, 2017</span>       
+    <td style="border: none;"> Submission of Manuscript
+ </td>        
+    <td style="border: none;">     <span style="">20/01/2018
+
+</span>       
     </td>      
     </tr>      
     <tr>       
-    <td> Notification of Review Outcomes: </td>        
-    <td style="">      
-    <span style="text-decoration: line-through!important;">October 09, 2017</span> &nbsp;&nbsp;&nbsp;<span style="">October 18, 2017</span>        
+    <td> Acceptance Notification
+ </td>        
+    <td style="border-bottom: 1px"> <span style="">01/02/2018
+</span>        
     </td>      
     </tr>      
     <tr>       
-    <td> Submission of Camera Ready Paper, Copyright Form and Author Registration</td>     
-    <td> November 13, 2017 </td>       
+    <td> Submission of Camera Ready Paper
+</td>     
+    <td> 20/02/2018
+ </td>       
     </tr>      
     <tr>       
-    <td style="border-bottom:1px solid #DDDDDD;"> Registration Deadline for Delegates: </td>       
-    <td style="border-bottom:1px solid #DDDDDD;"> November 30, 2017 </td>      
-    </tr>      
-    <tr>       
-    <td style="border-bottom:1px solid #DDDDDD;"> Conference Dates: </td>      
-    <td style="border-bottom:1px solid #DDDDDD;"> 14-15 December 2017 </td>        
+    <td style="border-bottom:1px solid #DDDDDD;"> Registration </td>       
+    <td style="border-bottom:1px solid #DDDDDD;">10/03/2018</td>      
     </tr>      
     </tbody>       
     </table>       
