--- a/comittee.html
+++ b/comittee.html
@@ -29,8 +29,8 @@
       <div class="conference-name">
                     <h1>International Conference
                     On Information Technology 
-                    &amp; Digital Applications</h1>     
-                    <h3>JECRC Foundation</h3>
+                    &amp; Digital Applications 2018</h1>     
+                    <h3>JECRC Foundation, Jaipur, Rajasthan</h3>
       </div>
       <div class="conference-img"> 
         <div>
@@ -61,7 +61,7 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                         <li class="active"><a href="index.html">Home</a></li>
+                         <li><a href="index.html">Home</a></li>
 
                         <li class="dropdown"><a href="#">Author's Panel <span class="caret"></span> </a>
                             <div class="dropdown-content">
