--- a/venue.html
+++ b/venue.html
@@ -27,8 +27,8 @@
       <div class="conference-name">
                     <h1>International Conference
                     On Information Technology 
-                    &amp; Digital Applications</h1>     
-                    <h3>JECRC Foundation</h3>
+                    &amp; Digital Applications 2018</h1>     
+                    <h3>JECRC Foundation, Jaipur, Rajasthan</h3>
       </div>
       <div class="conference-img"> 
         <div>
