callforpaper and index

--- a/callforpapers.html
+++ b/callforpapers.html
@@ -94,7 +94,11 @@
     <div class="container">
     <h1>Call For Papers</h1>
     <p><a href="CFP_ICITDA 2018.pdf">Download From Here</a></p>
-<p>The International Conference on Expert Applications & Security (ICITDA 2018) is the premier conference for the presentation of new advances and research results in the fields of Computer Science Engineering Applications and Security, to be held in the lovely and highly vibrant city of Jaipur in Rajasthan, India. </p>
+
+    <p>All honorable authors are kindly encouraged to contribute to and help shape the conference through submissions of their research abstracts, papers and e-posters. Also, high quality research contributions describing original and unpublished results of conceptual, constructive, empirical, experimental, or theoretical work in all areas of Applied Mathematics and Numerical Analysis are cordially invited for presentation at the conference. The conference solicits contributions of abstracts, papers and e-posters that address themes and topics of the conference, including figures, tables and references of novel research materials.
+    </p>
+
+<!--<p>The International Conference on Expert Applications & Security (ICITDA 2018) is the premier conference for the presentation of new advances and research results in the fields of Computer Science Engineering Applications and Security, to be held in the lovely and highly vibrant city of Jaipur in Rajasthan, India. </p>
 <p>ICITDA  2018 aims to provide an opportunistic forum and vibrant platform for researchers and industry practitioners to exchange state-of-the-art knowledge gained from their original research work and practical developments on specific new challenges, applications and experiences, to establish business or research relations, and to find global partners for future collaboration on emerging issues.
 </p>
 <p>The Expert Application concept of the conference will focus on current advances in research and use of Expert Systems with particular focus on the role in maintaining academic level while sharing novel research and cutting-edge developments in the fields of Computer System Security using cryptographic algorithms and other security schemes for system as well as for cloud.
@@ -104,10 +108,10 @@
 <p><b><u>Submission Guidelines:</u></b><br/>
 We are pleased to invite you to submit original contributions to ICITDA 2018 via the official submission system for the conference https://easychair.org/conferences/?conf=ICITDA 2018. This can include, technical and experimental, theoretical, conceptual, or a survey in the form of Position Paper/ Fast Abstracts/ Poster Papers/Tool Demonstrations/ Industrial Contributions.<br/>
 Articles submitted to the conference should report original, previously unpublished research results, experimental or theoretical offering novel research contributions in any aspect of Expert Applications & Security and must not be under consideration for publication elsewhere. Submissions will be double blind peer reviewed and evaluated based on originality, technical and/ or research content/depth, correctness, relevance to conference, contributions, and readability. The full paper submissions will be chosen based on technical merit, interest, applicability and how well they fit a coherent and balanced technical program.<br/>
-Topics of interests should fall under one or more of the conference tracks:<br/><br/></p>
+Topics of interests should fall under one or more of the conference tracks:<br/><br/></p>-->
 <div class="table-responsive">
   
-  <table class="table table-bordered table-striped">
+<!--  <table class="table table-bordered table-striped">
   
   <tr>
     <th width="40%">Track 1: Expert Applications and Artificial Intelligence</th>
@@ -116,12 +120,12 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
 
 </td>
   </tr>
- <!-- <tr>
+  <tr>
     <th>Track 2: Data Expert Systems</th>
     <td> Complex Systems and Applications, Self-Organizing Systems, Stochastic systems, Intelligent Surveillance, Computational Intelligence and Soft Computing, Multimedia Analytics, Distributed Intelligent Systems, Machine Learning.
 
 </td>
-  </tr>-->
+  </tr>
   <tr>
     <th>Track 2: Information and Application Security</th>
     <td> Security Issues and Threats in Expert Applications, Intelligence & Analytics in Security, Human Behavior and Factors in Security Applications, Data Leakage, Cloud Security, Endpoint Security, Cyber Threats Trends.
@@ -153,17 +157,20 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
     <th>TPC Members / Review Committee</th>
     <td>We are updating the list
 </td>
-  </tr>-->
+  </tr>
   
-</table>
+</table>-->
+  
   
 </div>
-For paper template & formatting instructions   <a href="http://www.easychair.org/publications/for_authors">click here</a> <br/>
-Copyright Form <a href="#">click here</a><br/>
-Author Registration Form <a href="Registration_Form_ICITDA -2018.doc" target="_blank">click here</a><br/> 
+For paper template & formatting instructions   <a href="#">to be updated</a> <br/>
+Copyright Form <a href="#">to be updated</a><br/>
+Author Registration Form <a href="#" target="_blank" style="text-decoration: underline;">to be updated</a><br/> 
 </div>
 </div>
-
+<br>
+<p style="text-align: center;">Prospective authors are invited to submit papers of four (4) to eight (8) A4 pages (including tables, figures and references) in standard IEEE double-column format (it is absolutely necessary to respect the Styleguide for Papers). A blind peer-review process will be used to evaluate all submitted papers. Each full registration for the conference will cover a maximum of one paper; each student registration will cover a single paper only. Extra paper, 2nd paper and onwards, must be registered separately. The format instructions in the template must be followed, it is notably important to use the right paper format: A4 to have the right margins not to use page numbering (page footer must be empty).
+  </p>
 
 
     <!-- footer -->
