schedule page added

--- a/venue.html
+++ b/venue.html
@@ -67,7 +67,7 @@
                                 <a href="registration.html">Registration</a>
                                 <a href="submission.html">Submission</a>
                                 <a href="guidelines.html">Author Guidelines</a>
-                                <a href="#">Tentative Schedule</a>
+                                <a href="schedule.html">Tentative Schedule</a>
                                 </div>
                                     </li> 
                          <li><a href="callforpapers.html">Call for papers</a></li>
@@ -104,7 +104,7 @@
                                 <br/>
                                 <a href="#"><img class="img-responsive img-blog" src="images/jalmahall.png" width="100%" alt="why is the image not appearing?" /></a>
                                 <h3>The regal cuisine, unrivaled architecture, and raw natural beauty of the Rajasthan countryside would be enough to make Jaipur into a world class destination. Yet, there is so much more to this city. Jaipur is packed with spellbinding festivals, richly decorated elephants casually going about their work, enchanting cultural insights, and a labyrinth of colourful dream palaces at every turn. A romantic pink hue pervades everything in Jaipur, hence the nickname “Pink City”.</h3>
-                                <a class="btn btn-primary readmore" href="https://en.wikipedia.org/wiki/Jaipur">Read More <i class="fa fa-angle-right"></i></a>
+                                <a class="btn btn-primary readmore" href="https://en.wikipedia.org/wiki/Jaipur" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
                     </div><!--/.blog-item-->
@@ -118,7 +118,7 @@
                                 <br/>
                                 <a href=""><img class="img-responsive img-blog" src="images/JECRC-Foundation2.jpg" width="100%" alt="jecrc image to be added" /></a>
                                 <h3>JECRC Foundation is ascribed as one of the leading educational groups in North India strengthening the engineering culture with setting up of top engineering colleges in India. The institutions of JECRC Foundation are amongst the top engineering colleges in Jaipur and currently have over 10000 students enrolled across various disciplines. Today, JECRC has earned respect as one of the most preferred engineering colleges in India as clearly represented by the RPET and AIEEE admission trends, year after year. </h3>
-                                <a class="btn btn-primary readmore" href="http://www.jecrcfoundation.com/aboutus.php">Read More <i class="fa fa-angle-right"></i></a>
+                                <a class="btn btn-primary readmore" href="http://www.jecrcfoundation.com/aboutus.php" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
                     </div><!--/.blog-item-->
