--- a/guidelines.html
+++ b/guidelines.html
@@ -69,7 +69,7 @@
                                 <a href="registration.html">Registration</a>
                                 <a href="submission.html">Submission</a>
                                 <a  href="guidelines.html">Author Guidelines</a>
-                                <a href="#">Tentative Schedule</a>
+                                <a href="schedule.html">Tentative Schedule</a>
                                 </div>
                                     </li> 
                          <li><a href="callforpapers.html">Call for papers</a></li>
