--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>About the Conference</h2>
-                <p class="lead">ICITDA stands for International Conference on Information Technology and Digital Applications.<br> ICITDA is a conference to be held in JECRC. It aims at bringing together the researchers and practitioners from academia, industry and government to deliberate on the algorithms, systems, applied, and research aspects of digital applications.
+                <p class="lead" style="text-align: justify;">ICITDA stands for International Conference on Information Technology and Digital Applications.<br> ICITDA is a conference to be held in JECRC. It aims at bringing together the researchers and practitioners from academia, industry and government to deliberate on the algorithms, systems, applied, and research aspects of digital applications.
                   International Conference “ICITDA-2018” is organized with a vision to address the various issues to promote the creation of intelligent solutions in future. It is expected that researchers will bring new prospects for collaboration across disciplines and gain ideas facilitating novel concepts. The theme of this conference will motivate the researchers to adopt the outcome for implementation. ICITDA -2018 is a premier conference, organized by the Department of Information Technology during April 6-7, 2018 at JECRC, Jaipur. The International Conference on Information Technology and Digital Applications-2018 (ICITDA-2018) aims to bring together the researchers, scientists, engineers, and research scholar in areas of Engineering and Technology, and it provides them an international forum for the dissemination of original research, new ideas and practical development experiences. The conference has the focus on the prime issues in the field of information technology. 
 It will focus on topics that are of interest to computer and computational scientists and engineers.
 It also provides a premier interdisciplinary platform for researchers, practitioners and educators to present and discuss the most recent innovations, trends, and concerns as well as practical challenges encountered and solutions adopted in the fields of digital applications and latest trends in information technology.<br>
@@ -159,7 +159,7 @@ et dolore magna aliqua. Ut enim ad minim veniam
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>About JECRC</h2>
-                <p class="lead">The National Society for Education Research and Development was set up and registered in the year 1999 in Jaipur with the major objective of providing quality education and research environment in Rajasthan. Jaipur Engineering College & Research Centre (JECRC) was established in Jaipur in the year 2000. Encouraged by its splendid achievements and overwhelming public patronage, it ventured into establishing a second college JECRC UDML College of engineering in the year 2007. The JECRC foundation has now become a brand name in professional education in Rajasthan. The founders and the society are now generally referred to as the JECRC Foundation.
+                <p class="lead" style="text-align: justify;">The National Society for Education Research and Development was set up and registered in the year 1999 in Jaipur with the major objective of providing quality education and research environment in Rajasthan. Jaipur Engineering College & Research Centre (JECRC) was established in Jaipur in the year 2000. Encouraged by its splendid achievements and overwhelming public patronage, it ventured into establishing a second college JECRC UDML College of engineering in the year 2007. The JECRC foundation has now become a brand name in professional education in Rajasthan. The founders and the society are now generally referred to as the JECRC Foundation.
 JECRC University was established in the year 2012 and is conducting UG, PG and Doctoral programmes in diversified fields (Engineering & Technology, Applied Science, Law and Management) and has also set up centres of research.
 </p>
             </div>
@@ -167,6 +167,60 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         </div><!--/.container-->
     </section><!--/#feature-->
 
+<div class="ccr_corbett" id="Dates">
+  <div class="container">
+    <div class="corbett">
+      <div class="title_bar">
+        <h2>IMPORTANT DATES</h2>
+        <div class="divider"></div>
+        <div class="divider_2"></div>
+      </div>
+     <!--  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  
+  
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="corbett_box"> <p>last date Paper Submission: July 30, 2017</p> </div>
+    </div>
+    <div class="item">
+      <div class="corbett_box"> <p><p>Notification of Acceptance: Oct 05, 2017</p></p> </div>
+    </div>
+   <div class="item">
+      <div class="corbett_box"> <p>Camera Ready Version: Oct 20, 2017</p> </div>
+    </div>
+    <div class="item">
+      <div class="corbett_box"> <p>Tutorial Proposal: Aug 15, 2017</p> </div>
+    </div>
+    <div class="item">
+      <div class="corbett_box"> <p>Tutorial Proposal: Aug 15, 2017</p> </div>
+    </div>
+
+    <div class="item">
+      <div class="corbett_box"> <p>Tutorial Announcement: Sep 15, 2017</p> </div>
+    </div>
+  
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
+
+ 
+</div> -->
+<div class="row">
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Manuscript submission deadline:<br/><b> November 30, 2017 (open)</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Notification of acceptance:<br/><b>January 5, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Camera ready paper due:<br/><b>January 20, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(Early Bird):<br/><b> January 20, 2018</b></p> </div></div>  
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(With Late Fee):<br/><b> February 05, 2018</p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> February 17-18, 2018</p> </div></div>
+</div>
+
+<!--
     <section id="middle">
         <div class="container">
             <div class="row">
@@ -246,14 +300,14 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
                               </div>
                             </div>
                           </div>
-                        </div><!--/#accordion1-->
+                        </div><!--/#accordion1
                     </div>
                 </div>
 
-            </div><!--/.row-->
-        </div><!--/.container-->
-    </section><!--/#middle-->
-  
+            </div><!--/.row-
+        </div><!--/.containe
+    </section><!--/#middle
+  ---->
 
   
   <section id="bottom" style="border-bottom-color: white">
