--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         <div class="divider"></div>
         <div class="divider_2"></div>
       </div>
+  </div>
+
      <!--  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   
  
@@ -190,7 +192,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> February 17-18, 2018</p> </div></div>
 </div>
 
-
+</div>
 
   <div class="sponsors" style="width:100%;;min-height:300px;background:#EBEBEB">
             <div class="container container11" style="padding: 30px 0;">
