--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <a href="registration.html">Registration</a>
                                 <a href="submission.html">Submission</a>
                                 <a href="guidelines.html">Author Guidelines</a>
-                                <a href="#">Tentative Schedule</a>
+                                <a href="schedule.html">Tentative Schedule</a>
                                 </div>
                                     </li> 
                          <li><a href="callforpapers.html">Call for papers</a></li>
@@ -167,8 +167,8 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         </div><!--/.container-->
     </section><!--/#feature-->
 
-   
-<div class="ccr_corbett" id="Dates">
+    <div class="ccr_corbett" id="Dates">
+  
   <div class="container">
     <div class="corbett">
       <div class="title_bar">
@@ -176,6 +176,8 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         <div class="divider"></div>
         <div class="divider_2"></div>
       </div>
+    </div>
+  </div></div></li></li></li></ul></p></div></div></section>
      <!--  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   
  
@@ -187,9 +189,8 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Camera ready paper due:<br/><b>January 20, 2018</b></p> </div></div>
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(Early Bird):<br/><b> January 20, 2018</b></p> </div></div>  
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(With Late Fee):<br/><b> February 05, 2018</p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> February 17-18, 2018</p> </div></div>
-</div>
-
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> February 17-18, 2018</b></p> </div></div>
+</div></b></p>
 
 
   <div class="sponsors" style="width:100%;;min-height:300px;background:#EBEBEB">
@@ -287,6 +288,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
                     Licenseing information is available at: http://bootstraptaste.com/license/
                     You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Gp
                 -->
+                
                 
             </div>
         </div>
