--- a/venue.html
+++ b/venue.html
@@ -103,7 +103,15 @@
                                 <h2><a href="blog-item.html">About Jaipur</a></h2>
                                 <br/>
                                 <a href="#"><img class="img-responsive img-blog" src="images/jalmahall.png" width="100%" alt="why is the image not appearing?" /></a>
-                                <h3>The regal cuisine, unrivaled architecture, and raw natural beauty of the Rajasthan countryside would be enough to make Jaipur into a world class destination. Yet, there is so much more to this city. Jaipur is packed with spellbinding festivals, richly decorated elephants casually going about their work, enchanting cultural insights, and a labyrinth of colourful dream palaces at every turn. A romantic pink hue pervades everything in Jaipur, hence the nickname “Pink City”.</h3>
+                                <h3 style="text-align: justify;">Jaipur widely known as “Pinkcity” is the state capital and natural gateway to the Rajasthan, situated in eastern part of Rajasthan which is at a distance of 260 km from Delhi and 240 km from Agra and forms a part the “Golden Triangle Tourist Circuit“. It is described to be bustling Capital city with trapping of modern metropolis but still its natural splendour and alluring beauty which never fails to surprise an explorer. The wide range of forts and monuments having exquisite mix of Rajasthani, Mughal artistry and flairs make people feel proud to be part of Jaipur.
+
+The old Jaipur painted in pink can hold any visitor or even common citizen with admiration. The spectacular backdrop comprising of forts like Amer, Nahargarh with rich heritage and culture are appropriate testimonial of the ancient era. The Jaipur is a hotspot for forts, palaces, temples, monuments and even gardens present widely are evidence of eye-catching city. Western Rajasthan itself forms a convenient circuit, in the spirit of the Thar Desert which has shaped its history, lifestyles and architecture.
+
+Jaipur is outstanding among contemporary Indian cities for the width and reliability of its streets. The city is increasing at remarkable rate from ancient customs to new era of metropolitan city. Jaipur is major hub for artists and craftsmen. Stone carving and sculpture multiply its fame over the globe.
+
+As having its rich appealing places to walk and around tourists are making more counts to visit this incredible city.
+
+                                The regal cuisine, unrivaled architecture, and raw natural beauty of the Rajasthan countryside would be enough to make Jaipur into a world class destination. Yet, there is so much more to this city. Jaipur is packed with spellbinding festivals, richly decorated elephants casually going about their work, enchanting cultural insights, and a labyrinth of colourful dream palaces at every turn. A romantic pink hue pervades everything in Jaipur, hence the nickname “Pink City”.</h3>
                                 <a class="btn btn-primary readmore" href="https://en.wikipedia.org/wiki/Jaipur" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
@@ -117,7 +125,11 @@
                                 <h2><a href="blog-item.html">About JECRC</a></h2>
                                 <br/>
                                 <a href=""><img class="img-responsive img-blog" src="images/JECRC-Foundation2.jpg" width="100%" alt="jecrc image to be added" /></a>
-                                <h3>JECRC Foundation is ascribed as one of the leading educational groups in North India strengthening the engineering culture with setting up of top engineering colleges in India. The institutions of JECRC Foundation are amongst the top engineering colleges in Jaipur and currently have over 10000 students enrolled across various disciplines. Today, JECRC has earned respect as one of the most preferred engineering colleges in India as clearly represented by the RPET and AIEEE admission trends, year after year. </h3>
+                                <h3 style="text-align: justify;">JECRC Foundation is ascribed as one of the leading educational groups in North India strengthening the engineering culture with setting up of top engineering colleges in India. The institutions of JECRC Foundation are amongst the top engineering colleges in Jaipur and currently have over 10000 students enrolled across various disciplines. Today, JECRC has earned respect as one of the most preferred engineering colleges in India as clearly represented by the RPET and AIEEE admission trends, year after year.
+
+                                The National Society for Education Research and Development was set up and registered in the year 1999 in Jaipur with the major objective of providing quality education and research environment in Rajasthan. Jaipur Engineering College & Research Centre (JECRC) was established in Jaipur in the year 2000. Encouraged by its splendid achievements and overwhelming public patronage, it ventured into establishing a second college JECRC UDML College of engineering in the year 2007. The JECRC foundation has now become a brand name in professional education in Rajasthan. The founders and the society are now generally referred to as the JECRC Foundation.
+JECRC University was established in the year 2012 and is conducting UG, PG and Doctoral programmes in diversified fields (Engineering & Technology, Applied Science, Law and Management) and has also set up centres of research.
+ </h3>
                                 <a class="btn btn-primary readmore" href="http://www.jecrcfoundation.com/aboutus.php" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
