--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         
     </header><!--/header-->
 	
+
+    <div class="back">
+        <button class="btn-info"> <a href="https://jecrcconference.in">BACK</a> </button>
+    </div>
+
+
 	<div class="slider">
 		<div class="container-fluid">
 			<div id="about-slider">
