--- a/guidelines.html
+++ b/guidelines.html
@@ -109,18 +109,18 @@
 <br/><br/><h3>Step B: Submitting for Review</h3> 
 <p>
 a. Follow the link here and submit your article with properly mentioning article title, authors’ names and other details that will be asked.<br/>
-b. Create / sign up for an Easychair account if you do not have one.<br/>
-c. Fill proper metadata of the article in Easychair as they exist in your article. Title, Abstract, Keywords, list of authors (in order) and their affiliation should be mentioned in Easychair while submitting.<br/>
+b. Create / sign up for an <span style="color: red">tobeupdated</span> account if you do not have one.<br/>
+c. Fill proper metadata of the article in <span style="color: red">tobeupdated</span> as they exist in your article. Title, Abstract, Keywords, list of authors (in order) and their affiliation should be mentioned in <span style="color: red">tobeupdated</span> while submitting.<br/>
 d. You will be assigned a unique article ID of your submitted article, which you should remember and use for any correspondence.<br/>
 e. Page size of an article should not exceed 12 in any case. Desired page size is 08 – 10.<br/>
 f. You need not upload editable source files (.doc or .docx or LaTeX files) for review. Submit single PDF files only. If your article is selected, you will later be asked for the source files.<br/>
 g. Review decision will be e-mailed to authors.<br/>
 h. No offline submission request through e-mail or surface mail will be entertained. Offline submissions will lead to outright rejection without any review or validating the quality of the article.<br/>
-Note: DO NOT submit multiple copies of same article, which will cause rejection. Any revision / uploading a new version / updating author information can be done on a submission through Easychair.<br/>
+Note: DO NOT submit multiple copies of same article, which will cause rejection. Any revision / uploading a new version / updating author information can be done on a submission through <span style="color: red">tobeupdated</span>.<br/>
        </p>
 <h3>Step C: After Acceptance<h3>
 <p><b>a. Preparing and uploading of the Camera Ready Article:</b><br><br>
-The final camera-ready copy of the papers must be in AISC format with a length of maximum 12 pages. Over-length charges will apply for each extra page beyond 10 pages. However, it is desired that maximum number of pages in an article should not exceed 12 pages in any circumstance. Check Step A: Manuscript preparation above for formatting the camera ready article. Upload camera-ready PDF on to the Easychair, and submit source file(s) along with items mentioned in Section e (below) as .zip or .rar file.
+The final camera-ready copy of the papers must be in AISC format with a length of maximum 12 pages. Over-length charges will apply for each extra page beyond 10 pages. However, it is desired that maximum number of pages in an article should not exceed 12 pages in any circumstance. Check Step A: Manuscript preparation above for formatting the camera ready article. Upload camera-ready PDF on to the <span style="color: red">tobeupdated</span>, and submit source file(s) along with items mentioned in Section e (below) as .zip or .rar file.
 <br><br>b. Paying Registration Fee:<br><br>
 Calculate the registration fee according to your page length and type of authorship as directed in REGISTRATION page and make payment using Foreign Telegraphic Transfer or Direct Transfer or NEFT Transfer or Wire transfer (preferable) or demand draft. Do not forget to keep the pay-in-slip or Challan or online payment receipt. You need the scanned copy of it or scan of the DD to complete next steps.
 <br><br>c. Filling up of the Registration Form, 
@@ -131,27 +131,27 @@ MS WORD format [<a href="" target="_blank">here</a>] or in PDF. format [<a href=
 <br><br> d. Filling up of the Consent to Publish Form, which can be found in publisher's web page [<a href="" target="_blank">To be updated</a>] or can directly be downloaded from [<a href="" target="_blank">To be updated</a>]
 <br><br>You need the following information to fill in the Consent to Publish Form:<br/>
 Series Title: Advances in Intelligent Systems & Computing series of Springer<br><br>
-Title of Conference: International Conference on Emerging Trends in Expert Applications & Security (ICETEAS 2018)<br><br>
+Title of Conference: International Conference on Emerging Trends in Expert Applications & Security (ICITDA 2018)<br><br>
 Editors: <br>
 •   Prof. Vinay Kumar Chandna<br>
 •   Prof. Vijay Singh Rathore<br><br>
-e. Mailing the following items in .zip / .rar format to iceteas@jecrc.ac.in:<br><br>
+e. Mailing the following items in .zip / .rar format to ICITDA@jecrc.ac.in:<br><br>
 1. The Camera ready Article source files, preferably in MS Word format<br>
 2. Scanned copy of filled in Registration Form<br>
 3. Scanned copy of filled in Consent to Publish Form<br>
 4. Proof of studentship for availing Student Registration (if applicable) signed by head of the department/course coordinator/registrar/director/principal.<br>
-5. Scan of registration fee pay-in-slip/voucher of online transfer/DD payable to ICETEAS-2018 (whichever applicable).<br>
-The mail must bear the subject line as: “Registration of article ICETEAS-2018-XXX”.<br>
+5. Scan of registration fee pay-in-slip/voucher of online transfer/DD payable to ICITDA-2018 (whichever applicable).<br>
+The mail must bear the subject line as: “Registration of article ICITDA-2018-XXX”.<br>
 (A SINGLE MAIL must bear all items below. If size exceeds 20 MB, break the mail into more than one. Append to subject line of the mails: Part 1, Part 2 etc. Multiple mails without size limitation will not be considered.)
 <br><br>f. Submission of original demand draft:<br><br>
 To be updated...<br>
-YOU NEED NOT POST ANYTHING IF YOU HAVE NOT MADE PAYMENT USING DEMAND DRAFT. ICETEAS-2018 will not be responsible for any postal delay or failure in receiving the documents by the deadlines.<br><br>
+YOU NEED NOT POST ANYTHING IF YOU HAVE NOT MADE PAYMENT USING DEMAND DRAFT. ICITDA-2018 will not be responsible for any postal delay or failure in receiving the documents by the deadlines.<br><br>
   </p><br/>
   <h3>Step D: Presentation Preparation</h3>
   <p>Electronic presentation facility will be available and presentation time is limited to 10 minutes including the question and answer session. The presentation should be crisp to clearly bring out the objective of the research and its outcomes along with its importance and applications, if any. The PPT must adhere to the template given [<a href="" target="_blank">here</a>].<br>
 Number of slides should be 10 (must not be beyond 12).<br>
-Presentation slides must be mailed to iceteas@jecrc.ac.in on or before 01-Jan-2017.<br>
-The mail MUST bear a subject line “Presentation slide of article ICETEAS2018-XXX”<br>
+Presentation slides must be mailed to ICITDA@jecrc.ac.in on or before 01-Jan-2017.<br>
+The mail MUST bear a subject line “Presentation slide of article ICITDA2018-XXX”<br>
 Recommendation for extending works for special issues will be on the basis of the value of the work as well as the presentation.<br</p>
 </div>
 </div>
