--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
                     <div class="col-lg-12 col-md-12 col-sm-12 pad0" style="text-align: center;padding-top: 10px;">
 
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 pad0 text-center">
-                            <span style="">   Technical Cooperation with</span>
+                            <span style="">   Association Cooperation with</span>
 
 
                             <hr style="height: 2px;background: #0D449C;padding: 0;margin: 10px 0">
@@ -231,28 +231,28 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         <div class="sponsors" style="width:100%;;min-height:300px;background: #EBEBEB;">
             <div class="container" style="padding: 30px 0;font-family: 'Russo One', sans-serif;color:#0D449C;font-size: 1.5em;">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 pad0 text-center">
-                    <span style="">   Conference Sponsors</span>
+                    <span style="">   Technical Cooperation with</span>
 
 
                         <hr style="height: 2px;background: #0D449C;padding: 0;margin: 10px 0">
                     </div>
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 paddcenter" style="padding: 0;">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-5" style="padding: 10px;">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding: 10px;">
 
-                            <div class="col-lg-12 text-center" style="border:3px solid #EB001C;border-radius: 5px 0 5px 0;padding: 34px 10px;">
-                                <img src="https://icmlds.org/assets/images/aws.png" alt="Owl Image" style="width:90%;"/>
+                            <div class="col-lg-12 text-center" style="border:3px solid #EB001C;border-radius: 5px 0 5px 0;padding: 10px 10px;">
+                                <img src="images/csib.png" alt="Owl Image" style="width:100%;"/>
                             </div>
 
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-5     " style="padding: 10px;">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding: 10px;">
 
-                            <div class="col-lg-12" style="border:3px solid #0D449C;border-radius: 5px 0 5px 0;padding: 50px 10px;">
-                                <img src="https://icmlds.org/assets/images/times.png" alt="Owl Image" style="width:100%;"/>
+                            <div class="col-lg-12" style="border:3px solid #0D449C;border-radius: 5px 0 5px 0;padding: 10px 10px;">
+                                <img src="images/ACM.png" alt="Owl Image" style="width:100%;height:80%"/>
                             </div>
 
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-10" style="padding: 10px;">
+                    <!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-10" style="padding: 10px;">
 
                         <div class="col-lg-12 pad0" style="border:3px solid #EB001C;border-radius: 5px 0 5px 0;padding: 25px 10px;background: #fff;">
                             <img src="https://icmlds.org/assets/images/uf.png" alt="Owl Image" style="width:100%;"/>
@@ -282,7 +282,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
                             <img src="https://icmlds.org/assets/images/dellemc.jpg" alt="Owl Image" style="width:50%;"/>
                         </div>
 
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
