--- a/guidelines.html
+++ b/guidelines.html
@@ -91,7 +91,7 @@
     <!-- code goes here...... -->
     <div class="content_page">
     <div class="container">
-    <h1>Author Guidelines</h1>
+    <h1 style="color:#034261">Author Guidelines</h1>
     <h3>Step A: Manuscript Preparation</h3>
 <p>1. The manuscript should be prepared in given format using MS WORD and/or LaTeX template available respectively in MS word (.doc), and LaTeX. The guidelines given here may help you to prepare the manuscript. These templates and guidelines can also be found in publisher’s homepage (link here) by clicking on `Instructions for Authors' section.<br>
 2. The figures / graphs / plots in the manuscript MUST be of good resolution (600 dpi or more), tables MUST NOT be in pictorial format. Text in figures should not be too small, and preferably of equal size as text of the article.<br>
