contents added/updated

--- a/submission.html
+++ b/submission.html
@@ -91,17 +91,24 @@
     <!-- code goes here...... -->
       <div class="content_page">
     <div class="container">
-    <h1>Paper Submission</h1>
-<p>Submissions of high quality papers in all areas of Soft Computing and its applications in Engineering.The Selected Papers will be published in Kalpa Publication by Easy Chair. The submissions are handled only through the Easychair website at:<br></p>
+
+    <h1 style="color: #013c65">Paper Submission</h1>
+    <p>
+             Authors are requested to submit their Research Paper using Times New Roman with Font size 12 in MS Word in IEEE format at icitda@jecrc.ac.in  Paper should have an Abstract of 200 words, 4-6 Key Words, Figures, Diagrams, Tables, Graphs and Reference in prescribed Format and Full Length of  Paper not more than 6 Pages. Authors have to follow the Dates as mentioned.
+Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals IJETAE (International Journal of Emerging Technology and advanced Engineering ISSN: 2250–2459) and IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469].
+
+    </p>
+<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering.The Selected Papers will be published in our <span style="color: red">CMTool</span>. The submissions are handled through the <span style="color: red">CMTool</span> website or official ICITDA email:<br></p>
 <center>
-                    <img src="images/logos/easychair_logo.png" /><br><a href="https://easychair.org/conferences/?conf=iceteas2018" target="_blank">https://easychair.org/conferences/?conf=iceteas2018</a>
-                    </center><br>
+                    <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a>
+                    <br>
+                    <mailto>icitda@jecrcconference.in</mailto><br></center>
                     <p>
-                    For paper template & formatting instructions &nbsp <a href="http://www.easychair.org/publications/for_authors" target="_blank">click here</a>
+                    For paper template & formatting instructions &nbsp <a href="#" target="_blank">click here</a>
                     <br>
     Copyright Form <a href="#" target="_blank">To be updated soon</a>
                     <br>
-    Author Registration Form  <a href="Registration_Form_ICETEAS-2018.doc" target="_blank">click here</a>
+    Author Registration Form  <a href="#" target="_blank">click here</a>
                     <br>
                     </p>
                     
