--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
  
 </div> -->
 <div class="row">
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Manuscript submission deadline:<br/><b> November 30, 2017 (open)</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Notification of acceptance:<br/><b>January 5, 2018</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Camera ready paper due:<br/><b>January 20, 2018</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(Early Bird):<br/><b> January 20, 2018</b></p> </div></div>  
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration(With Late Fee):<br/><b> February 05, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Manuscript deadline:<br/><b> January 20, 2018 (open)</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Acceptance notification:<br/><b>February 01, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of camera ready paper:<br/><b>February 20, 2018</b></p> </div></div>
+  
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration:<br/><b> March 10, 2018</b></p> </div></div>
 
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> February 17-18, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> March, 2018</b></p> </div></div>
 
  
 </div>
