--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
 </div>
 
 </div>
+</div>
   <div class="sponsors" style="width:100%;;min-height:300px;background:#EBEBEB">
             <div class="container container11" style="padding: 30px 0;">
                 <div class="col-lg-12" style="margin-top:10px;padding: 0;font-family: 'Russo One', sans-serif;color:#0D449C;font-size: 1.5em;">
