removal of foreign keywords from guidelines

--- a/guidelines.html
+++ b/guidelines.html
@@ -131,11 +131,11 @@ MS WORD format [<a href="" target="_blank">here</a>] or in PDF. format [<a href=
 <br><br> d. Filling up of the Consent to Publish Form, which can be found in publisher's web page [<a href="" target="_blank">To be updated</a>] or can directly be downloaded from [<a href="" target="_blank">To be updated</a>]
 <br><br>You need the following information to fill in the Consent to Publish Form:<br/>
 Series Title: Advances in Intelligent Systems & Computing series of Springer<br><br>
-Title of Conference: International Conference on Emerging Trends in Expert Applications & Security (ICITDA 2018)<br><br>
+Title of Conference: International Conference on Information Technology and Digital Applications (ICITDA 2018)<br><br>
 Editors: <br>
-•   Prof. Vinay Kumar Chandna<br>
-•   Prof. Vijay Singh Rathore<br><br>
-e. Mailing the following items in .zip / .rar format to ICITDA@jecrc.ac.in:<br><br>
+•   Prof.<br>
+•   Prof.<br><br>
+e. Mailing the following items in .zip / .rar format to icitda@jecrcconference.in:<br><br>
 1. The Camera ready Article source files, preferably in MS Word format<br>
 2. Scanned copy of filled in Registration Form<br>
 3. Scanned copy of filled in Consent to Publish Form<br>
@@ -150,7 +150,7 @@ YOU NEED NOT POST ANYTHING IF YOU HAVE NOT MADE PAYMENT USING DEMAND DRAFT. ICIT
   <h3>Step D: Presentation Preparation</h3>
   <p>Electronic presentation facility will be available and presentation time is limited to 10 minutes including the question and answer session. The presentation should be crisp to clearly bring out the objective of the research and its outcomes along with its importance and applications, if any. The PPT must adhere to the template given [<a href="" target="_blank">here</a>].<br>
 Number of slides should be 10 (must not be beyond 12).<br>
-Presentation slides must be mailed to ICITDA@jecrc.ac.in on or before 01-Jan-2017.<br>
+Presentation slides must be mailed to icitda@jecrcconference.in on or before 01-Jan-2017.<br>
 The mail MUST bear a subject line “Presentation slide of article ICITDA2018-XXX”<br>
 Recommendation for extending works for special issues will be on the basis of the value of the work as well as the presentation.<br</p>
 </div>
