--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         </div><!--/.container-->
     </section><!--/#feature-->
 
-    <div class="ccr_corbett" id="Dates">
+    <div class="bgdates">
   
   <div class="container">
     <div class="corbett">
       <div class="title_bar">
-        <h2>IMPORTANT DATES</h2>
+        <h2 style="color: red;">IMPORTANT DATES</h2>
         <div class="divider"></div>
         <div class="divider_2"></div>
       </div>
@@ -188,7 +188,7 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
  
  
 </div> -->
-<div class="row">
+<div class="row" >
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Manuscript deadline:<br/><b> January 20, 2018 (open)</b></p> </div></div>
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Acceptance notification:<br/><b>February 01, 2018</b></p> </div></div>
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of camera ready paper:<br/><b>February 20, 2018</b></p> </div></div>
@@ -204,13 +204,14 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
 
 </div>
 </div>
+<br>
   <div class="sponsors" style="width:100%;;min-height:300px;background:#EBEBEB">
             <div class="container container11" style="padding: 30px 0;">
                 <div class="col-lg-12" style="margin-top:10px;padding: 0;font-family: 'Russo One', sans-serif;color:#0D449C;font-size: 1.5em;">
                     <div class="col-lg-12 col-md-12 col-sm-12 pad0" style="text-align: center;padding-top: 10px;">
 
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 pad0 text-center">
-                            <span style="">   Association Cooperation with</span>
+                            <span style="">   In Association with</span>
 
 
                             <hr style="height: 2px;background: #0D449C;padding: 0;margin: 10px 0">
