important dates managed

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@ JECRC University was established in the year 2012 and is conducting UG, PG and D
         </div><!--/.container-->
     </section><!--/#feature-->
 
-    <div class="bgdates">
+    <div class="bgdates" style="z-index: -1">
   
-  <div class="container">
-    <div class="corbett">
+  <div class="container-fluid" style="background-color: #bdb7b7; opacity: 0.8;color: black">
+    <div class="container">
       <div class="title_bar">
-        <h2 style="color: red;">IMPORTANT DATES</h2>
+        <h2 style="text-align: center;font-weight: 800;">IMPORTANT DATES</h2>
         <div class="divider"></div>
         <div class="divider_2"></div>
       </div>
