--- a/submission.html
+++ b/submission.html
@@ -98,11 +98,11 @@
 Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals IJETAE (International Journal of Emerging Technology and advanced Engineering ISSN: 2250–2459) and IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469].
 
     </p>
-<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering.The Selected Papers will be published in our <span style="color: red">CMTool</span>. The submissions are handled through the <span style="color: red">CMTool</span> website or official ICITDA email:<br></p>
+<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and other submission tools (<span style="color: red">to be updated soon</span>):<br></p>
 <center>
-                    <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a>
+                    <!-- <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a> -->
                     <br>
-                    <mailto>icitda@jecrcconference.in</mailto><br></center>
+                    <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
                     <p>
                     For paper template & formatting instructions &nbsp <a href="#" target="_blank">click here</a>
                     <br>
