--- a/comittee.html
+++ b/comittee.html
@@ -182,7 +182,9 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. U. K. Parik, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr. Sunil Jangir, JECRC</span>            
+  <span>Dr. Lokesh Bansal, JECRC</span>            
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span> Dr. Sandeep Vyas,JECRC</span>
   </div>     
       <!-------------------------Publication Chair -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
