--- a/speakers.html
+++ b/speakers.html
@@ -92,7 +92,6 @@
         <div class="team">
         <div class="center wow fadeInDown">
           <h2>Our <span>Keynote Speakers</span></h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
         </div>
 
         <div class="row clearfix">
@@ -100,16 +99,14 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/man1.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/kamal.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
+                  <h4>Kamal Kant Hiran</h4>
+                  <h5>Research Fellow, Aalborg University, Denmark</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
+                    <li class="btn"><a href="#">Ph.D.</a></li>
+                    <li class="btn"><a href="#">M. Tech.</a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -130,16 +127,14 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/man2.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/rk.png" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
+                  <h4>Dr. Rajesh Kumar Tiwari</h4>
+                  <h5>Professor, RVS College of Engg. & Tech.</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
+                    <li class="btn"><a href="#">Ph.D.</a></li>
+                    <li class="btn"><a href="#">M. Tech.</a></li>
                   </ul>
                   <ul class="social_icons">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -234,7 +229,7 @@
         <!--/.row-->
       </div>
       <!--section-->
-      <div class="row team-bar">
+     <!--  <div class="row team-bar">
           <div class="first-one-arrow hidden-xs">
             <hr>
           </div>
@@ -276,11 +271,9 @@
                   </ul>
                 </div>
               </div>
-              <!--/.media -->
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
             </div>
           </div>
-          <!--/.col-lg-4 -->
 
 		<div class="row clearfix">
           <div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -305,12 +298,12 @@
                   </ul>
                 </div>
               </div>
-              <!--/.media -->
+
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
             </div>
           </div>
-          <!--/.col-lg-4 -->
-        </div>
+
+        </div> -->
         <!--/.row -->
          
           <!--/.col-lg-4 -->
