members added in advisory

--- a/comittee.html
+++ b/comittee.html
@@ -169,7 +169,53 @@
   <span>Dr. Subrat K Dash ,Professor,LNMIIT,Jaipur</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Dr. Minakshi Tripathi, MNIT, India</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Shri O.P. Jain, JECRC</span>   
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Shri P. K. Tiwari, JECRC</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Abhishek Gupta, CSE, SMVDU, Jammu</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Shivnath Ghosh, Dean R & D, Maharana Pratap College of Technology, Gwalior, MP</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Madhushi Verma, Department of CSE, School of Engineering and Applied Sciences, BENNETT University, Noida</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. K. Thippeswamy, Prof. & Head, CSE, VTU, Mysuru</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prof. (Dr.) Durgesh K. Mishra, Director, Microsoft Innovation Center, Sri Aurobindo Institute of Technology, Indore, MP, India. Visiting Professor, Indian Institute of Technology, Indore</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Akash Saxena, Compucom Institute of Technology & Management, Jaipur</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Anil Kumar Singh, Department of CSE, MNNIT</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Lokesh Chouhan, Department of Computer Engineering, NITH</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Ms. Madhu Kumari, Department of Computer Engineering, NITH</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Mr. Suman Deb, Department of Computer Engineering, NITA</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Loveleen Gaur, Amity University, Noida</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. C.V. Suresh Babu, Educational consultant, NITTTR Chennai Area</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Muthukumaran Subramaniam, Indian Institute of Information Technology, Trichy, Tamilnadu</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Rahul Kulkarni  Director, Smt.S.M.Agrawal Institute of Management Chalisgaon (Maharashtra) Nort Maharashtra University</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Kamal Kant Hiran, Faculty of Informatics, Aalborg University, Denmark</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. N. Muthukumaran, Department of Electronics and Communication Engineering, Francis Xavier Engineering College, Chennai</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Vikash Gupta,  Dean Academic, VCET vasai, Mumbai</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Roheet Bhatnagar, Department of CSE, School of Computing & Information Technology, Manipal University, Jaipur</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prof.(Dr.) Krishna Asawa, HoD- CSE, Jaypee Institute of Information Technology, Noida</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prof. Suneeta Agarwal, Department of CSE, MNNIT</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Mahesh Bundele, SMIEEE, LMISTE, Member, STDCOM Tech. & Prof. Activities, IEEE Delhi Section Membership Development Chair,  IEEE Rajasthan Subsection, Dean (R&D), Poornima University, Jaipur, Rajasthan, India</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Akshay Kumar Rathore, Senior Member, IEEE (USA), ​Associate Professor, Electrical and Computer Engineering, Concordia University Montreal, Canada, Adjunct faculty: National University of Singapore; Indian Institute of Technology, Jodhpur, India; Northwestern Polytechnic University, Xian, China. Visiting faculty University of Technology of Belfort-Montbeliard, France</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+
+  <span>Shri P. K. Tiwari, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Prof. S.N. Gupta, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Prof. Mukt Bihari, JECRC </span>   
