--- a/speakers.html
+++ b/speakers.html
@@ -107,6 +107,7 @@
                   <ul class="tag clearfix">
                     <li class="btn"><a href="#">Ph.D.</a></li>
                     <li class="btn"><a href="#">M. Tech.</a></li>
+                    <li class="btn"><a href="#">B.E.</a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -117,7 +118,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+              <p>Mr. Kamal is working as a Lecturer in the Department of IT, University of Gondar, Ethiopia and Research fellow in the Aalborg University, Denmark. He has more than 12 years of academic and research experience. He has published papers in refered international journals and International conferences. </p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -144,7 +145,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+              <p>Dr. Rajesh Kumar Tiwari is working as an associate professor at RVS College of Engineering and Technology, Jamshedpur Area, India. He received his education from B.I.T. Mesra, Ranchi. He is specialized in .net, c, c + +, cryptography, crystal reports, network security, operating systems, oracle sql, oracle version 8, sql, sql server 2005, visual basic 6.0.</p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -180,13 +181,12 @@
                 </div>
 
                 <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
+                  <h4>Dr. kailash kumar maheshwari</h4>
+                  <h5>Electronic University, Saudi Arabia</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
+                    <li class="btn"><a href="#">Ph.D.</a></li>
+                    <li class="btn"><a href="#">M. Tech.</a></li>
+                    <li class="btn"><a href="#">B.E.</a></li>
                   </ul>
                   <ul class="social_icons">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
