--- a/speakers.html
+++ b/speakers.html
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+              <p>Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences..</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-md-offset-2">
