--- a/comittee.html
+++ b/comittee.html
@@ -117,6 +117,13 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
   <span>Dr. V. K. Chandna, Principal</span>    
   </div>     
+  <!-------------------------Finance -------------------------------------->     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
+  <span>TPC Chair</span>     
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
+  <span>Ms.Manju Vyas</span>    
+  </div>  
   <!-------------------------Publication Chair -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
   <span>Conveners</span>     
@@ -236,10 +243,8 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
   <span>Organising Committee</span>    
   </div>     
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
-  <span>Ms.Manju Vyas, Chair OC</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr.Vishal Sagtani</span>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+  <span>Mr.Vishal Sagtani, Chair OC</span>
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Ms.Kusum Yadav</span>
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
@@ -260,7 +265,18 @@
   <span>Mr.Jayshankar</span>
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Ms.Neha Mudgal</span>
-  </div>  
+  </div> 
+      <!-------------------------Publication Chair -------------------------------------->     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
+  <span>Student Co-ordinators</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prasang Gupta, JECRC</span>
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Laveesh Gupta, JECRC</span>
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prateek Joshi, JECRC</span>
+  </div>   
        
   </div>   
 
