--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 					<div class="carousel-inner">     <div class="item active">
                          <div class="desc">
-                            <h1>JECRC Foundation</h1>
+                            <h1>JECRC College, Jaipur</h1>
                         </div>
 					<img src="images/JECRC-Foundation.jpg" class="img-responsive image-fit" alt="">     </div>
 					<div class="item">       
