--- a/comittee.html
+++ b/comittee.html
@@ -271,11 +271,11 @@
   <span>Student Co-ordinators</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-  <span>Prasang Gupta, JECRC</span>
+  <span>Prasang Gupta, JECRC Foundation</span>
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Laveesh Gupta, JECRC</span>
+  <span>Laveesh Gupta, JECRC Foundation</span>
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Prateek Joshi, JECRC</span>
+  <span>Prateek Joshi, JECRC Foundation</span>
   </div>   
        
   </div>   
